k8s/07-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: cartes113
spec:
  selector:
    app: app
  ports:
    - name: http
      port: 80
      targetPort: 80
